# object-oriented-programming

./: .gitignore  README.md
02_tdd/: CMakeLists.txt
02_tdd/include/: TextWrapper.h
02_tdd/src/: TextWrapper.cpp  main.cpp
02_tdd/test/: CMakeLists.txt
02_tdd/test/src/: TextWrapperTest.cpp
03_sequence_containers/test/src/: CollectionsTest.cpp
04_associative_containers/test/src/: CollectionsTest.cpp
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/bench/src/: DummyBench.cpp  ExampleBench.cpp  LargeBench.cpp  LargeForwardListBench.cpp  LargeSetBench.cpp  LargeUnorderedSetBench.cpp  MediumBench.cpp  MediumForwardListBench.cpp  MediumSetBench.cpp  MediumUnorderedSetBench.cpp  PauseAndResumeBench.cpp  SmallBench.cpp  SmallForwardListBench.cpp  SmallSetBench.cpp  SmallUnorderedSetBench.cpp
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
05_stl_benchmark/output/: EqualOperatorOutput  HashOutput  LessOperatorOutput  largeBenchmarks  mediumBenchmarks  smallBenchmarks
05_stl_benchmark/test/src/: LargeTest.cpp  MediumTest.cpp  SmallTest.cpp
06_observer_pattern/: CMakeLists.txt
06_observer_pattern/include/: Acceleration.h  Displacement.h  Observable.h  Observer.h  Speed.h
06_observer_pattern/src/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Observer.cpp  Speed.cpp
06_observer_pattern/test/: CMakeLists.txt
06_observer_pattern/test/src/: DisplacementTest.cpp
06_observer_pattern/uml/: diagram.puml
07_abstract_factory_pattern/: CMakeLists.txt
07_abstract_factory_pattern/include/: ButtonGnomeWidget.h  ButtonKdeWidget.h  CheckBoxGnomeWidget.h  CheckBoxKdeWidget.h  Demo.h  GnomeWidgetFactory.h  KdeWidgetFactory.h  ListGnomeWidget.h  ListKdeWidget.h  Widget.h  WidgetFactory.h
07_abstract_factory_pattern/src/: ButtonGnomeWidget.cpp  ButtonKdeWidget.cpp  CheckBoxGnomeWidget.cpp  CheckBoxKdeWidget.cpp  Demo.cpp  GnomeWidgetFactory.cpp  KdeWidgetFactory.cpp  ListGnomeWidget.cpp  ListKdeWidget.cpp  main.cpp
07_abstract_factory_pattern/test/: CMakeLists.txt
07_abstract_factory_pattern/test/src/: DemoTest.cpp
09_Qt/build-simple_gui-Desktop-Debug/: Makefile  moc_acceleration.cpp  moc_displacement.cpp  moc_mainwindow.cpp  moc_speed.cpp  simple_gui  ui_mainwindow.h
09_Qt/simple_gui/: acceleration.h  mainwindow.cpp  mainwindow.h  simple_gui.pro  speed.cpp  speed.h
10_state_machine/: .gitignore  mainwindow.cpp  mainwindow.h  testowyplik.txt
11_QML/: 11_QML.pro  acceleration.cpp  acceleration.h  demo.cpp  demo.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
11_qml/: 11_qml.pro  acceleration.h  displacement.cpp  displacement.h  main.cpp  main.qml  mainwindow.h  speed.h
12_qt_testing/: 12_qt_testing.pro
12_qt_testing/cli/: main.cpp
12_qt_testing/tests/: tests.pro
12_qt_testing/tests/demo_test/: demo_test.pro  tst_demotest.cpp
12_qt_testing/utils/: demo.cpp  demo.h  utils.pro
Zadanie12/: CMakeLists.txt
Zadanie12/src/: Dummy.cpp  Dummy.h  main.cpp
Zadanie12/test/: test.cpp
build-10_state_machine-Desktop-Debug/: 10_state_machine  Makefile  ui_mainwindow.h
simple_gui/: acceleration.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  speed.cpp
